--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,400&display=swap');
 
+:root {
+    --primary-color: #f2726a;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -20,20 +24,16 @@ body {
     width: 300px;
     height: 400px;
     background-color: #242628;
-    margin: 282px auto;
     border-radius: 12px;
+    /* margin: 282px auto; */
 }
 
 .card_img {
-    height: 122px;
-}
-
-.card_img span {
     width: 122px;
     height: 122px;
+    border: 4px solid var(--primary-color) ;
     border-radius: 50%;
     background-color: #ccc;
-
 }
 
 .card_name {
