--- a/style.css
+++ b/style.css
@@ -29,11 +29,31 @@ body {
     background-color: #242628;
     border-radius: 12px;
     text-align: center;
+    overflow: hidden;
     /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; */
 }
+
+/* how to put pictures in frames
+
+.card_image {
+    width: 35px;
+    height: 35px;
+    border: 1px solid var(--primary-color);
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+
+.card_image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+} */
+
 
 .card_img {
     width: 122px;
@@ -42,7 +62,9 @@ body {
     border-radius: 50%;
     background-color: #ccc;
     overflow: hidden;
-    margin: 25px auto;
+    margin: auto;
+    transform: translateY(25px);
+    transition: 0.3s;
 }
 
 .card_img img {
@@ -52,9 +74,18 @@ body {
     object-position: center;
 }
 
+.card_img:hover {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: unset;
+    transform: unset;
+}
+
 
 .card h2 {
     color: #fff;
+    margin-top: 35px;
 }
 
 .card p {
